[gd_scene load_steps=14 format=3 uid="uid://cp3t3h0ya1176"]

[ext_resource type="Texture2D" uid="uid://crwh12bube88y" path="res://assets/Menu-export.png" id="1_213kh"]
[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_ad7ml"]
[ext_resource type="FontFile" uid="uid://df1diabc4vw8m" path="res://Fonts/Huggy Bear.otf" id="2_64rkm"]
[ext_resource type="FontFile" uid="uid://cya2gqvjhuwh4" path="res://Fonts/Huggy Bear Italic.otf" id="3_7ep3a"]
[ext_resource type="Shader" path="res://scenes/menu/main_menu.gdshader" id="3_fi5my"]
[ext_resource type="AudioStream" uid="uid://d5e6p7qs74jc" path="res://sounds/coin.wav" id="5_78gsu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m8rcv"]
texture = ExtResource("1_213kh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7nmka"]
shader = ExtResource("3_fi5my")
shader_parameter/height = 2.0
shader_parameter/frequency = 10.0
shader_parameter/speed = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_afdqv"]
font_size = 83
shadow_size = 20
shadow_color = Color(0.027451, 0.027451, 0.027451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bhvk7"]
font = ExtResource("3_7ep3a")
font_size = 80
shadow_size = 20
shadow_color = Color(0.0235294, 0.0235294, 0.0235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bedc"]
bg_color = Color(0.450648, 0.450648, 0.450648, 0.721569)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpb44"]
bg_color = Color(0.2484, 0.2484, 0.2484, 0.721569)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikom8"]
bg_color = Color(0.6, 0.6, 0.6, 0.721569)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ad7ml")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_m8rcv")

[node name="Label" type="Label" parent="."]
material = SubResource("ShaderMaterial_7nmka")
layout_mode = 0
offset_left = 12.0
offset_top = 30.0
offset_right = 738.0
offset_bottom = 145.0
theme_override_fonts/font = ExtResource("2_64rkm")
theme_override_font_sizes/font_size = 83
text = "Drake & Drakkar
"
label_settings = SubResource("LabelSettings_afdqv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
material = SubResource("ShaderMaterial_7nmka")
layout_mode = 0
offset_left = 150.0
offset_top = 105.0
offset_right = 734.0
offset_bottom = 217.0
theme_override_fonts/font = ExtResource("3_7ep3a")
theme_override_font_sizes/font_size = 73
text = "Bubble Battle"
label_settings = SubResource("LabelSettings_bhvk7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 728.0
offset_top = 308.0
offset_right = 1099.0
offset_bottom = 621.0
theme_override_constants/separation = 25
alignment = 1

[node name="startButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.295867, 0.295866, 0.295866, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_64rkm")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_5bedc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cpb44")
theme_override_styles/normal = SubResource("StyleBoxFlat_ikom8")
text = "Start"

[node name="creditButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.295867, 0.295866, 0.295866, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_64rkm")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_5bedc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cpb44")
theme_override_styles/normal = SubResource("StyleBoxFlat_ikom8")
text = "Cr√©dits"

[node name="exitbutton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.295867, 0.295866, 0.295866, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_64rkm")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_5bedc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cpb44")
theme_override_styles/normal = SubResource("StyleBoxFlat_ikom8")
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="VBoxContainer/exitbutton"]
stream = ExtResource("5_78gsu")

[connection signal="mouse_entered" from="VBoxContainer/startButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/startButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/creditButton" to="." method="_on_credit_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/creditButton" to="." method="_on_credit_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/exitbutton" to="." method="_on_exitbutton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/exitbutton" to="." method="_on_exitbutton_pressed"]
